tests/integration/snapshots/integration__conformance__n_number_hex_2_digits.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[0x42]
stdout ---

stderr ---
error: unexpected character `x`. expected start of a json value
 --> stdin:1:3
  |
1 | [0x42]
  |   ^
