tests/integration/snapshots/integration__conformance__n_number_infinity.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[Infinity]
stdout ---

stderr ---
error: unexpected character `I`. expected start of a json value
 --> stdin:1:2
  |
1 | [Infinity]
  |  ^
