tests/integration/snapshots/integration__conformance__n_number_invalid+-.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[0e+-1]
stdout ---

stderr ---
error: expected digit after exponent indicator, found `-`
 --> stdin:1:5
  |
1 | [0e+-1]
  |   --^
  |   |
  |   exponent found here
