tests/integration/snapshots/integration__conformance__n_number_invalid-utf-8-in-bigger-int.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [91, 49, 50, 51, 229, 93]
stdout ---

stderr ---
error: expected a continuation byte, found 0x5D
 --> stdin:1:5
  |
1 | [123�]
  |     ^
